added api versioning ad updated swagger docs
